--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!--core first + styles last-->
   
 
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
 	<div><img src="https://www.shareicon.net/data/128x128/2016/09/02/824472_peace_512x512.png" id="logo"></div>
